Current:
  * Jump to the char containing the error on encountering unmatched parenthesis.
  * Attempt to mark the whole error message in red.
  * Detect and mark most warnings.
  * A "evaluate cells below" right-click-menu item.
  * Autosave now even works for unsaved documents adding them to the
    "recent documents" list if needed.
  * Big parenthesis are now drawn using unicode characters, if available.
  * Nicer integral, Product and Sum signs, optionally including antialiassing
    even if no font provides them.
  * MouseOver tooltip for some of the most exotic worksheet items.
  * A "Copy as svg" function that is as good as wxSVGFileDc allows us to be.
  * Worksheet objects now can provide their own ToolTips.
  * Config Dialogue: An editor for the startup file.
  * Now multiple animations can run concurrently and can be told to autostart.
  * A menu entry that allows to select 1D and ASCII Art Maths
  * Recent files that currently don't exist are grayed out now.
  * Several Bug Fixes and big Performance improvements.

17.05:
  * A config item that allows to disable printing of Cell brackets.
  * Cell brackets of inactive cells can now be hidden.
  * Due to popular demand we can now suppress the output of automatic labels.
  * The option to use a Minus instead of a Hyphen.
  * Table of Contents: Folded items are now grayed out.
  * Table of Contents: A right-click menu.
  * Copy-and-paste now includes hidden cells and folded items.
  * Eye Candy: An indicator that shows when maxima and wxMaxima exchange data.
    Double-clicking this indicator opens up the network monitor.
  * Autocompletion now collects words from the current code cell, too.
  * Better indentation of if clauses and loops.
  * If the number is too long to display it now is still possible to copy it.
  * Documented that box() highlights text in maxima's output.
  * the with_slider type of commands now uses wxstatusbar() in order to provide
  * progress information for the user.