@@ -534,6 +534,8 @@ protected:
   bool m_htmlHelpInitialized;
   wxString m_maximaVersion;
   wxString m_lispVersion;
+  //! The Char the current command starts at in the current WorkingGroup
+  int m_commandIndex;
 #if defined (__WXMSW__)
   wxCHMHelpController m_chmhelpCtrl;
 #endif
@@ -602,6 +604,7 @@ public:
 
   virtual void MacOpenFile(const wxString &file);
 private:
+  //! The name of the config file. Empty = Use the default one.
   wxString m_configFileName;
   DECLARE_EVENT_TABLE()
 };
