@@ -1,5 +1,6 @@
 Current:
   * Jump to the char containing the error on encountering unmatched parenthesis.
+  * Try to place the cursor near the error in all other cases.
   * Attempt to mark the whole error message in red.
   * Detect and mark most warnings.
   * A "evaluate cells below" right-click-menu item.
